--- a/Exercise_for_Pool/web/web-trace2/style.css
+++ b/Exercise_for_Pool/web/web-trace2/style.css
@@ -1,7 +1,171 @@
 @charset "utf-8";
 
-/* 
-.example {
-    color: red;
-} 
-*/
+* {
+	margin: 0;
+	padding: 0;
+}
+
+html {
+	font-size: 100%;
+}
+
+body {
+	color: black;
+	background-color: #fefbdb;
+}
+
+a {
+	text-decoration: none;
+}
+
+li {
+	list-style: none;
+}
+
+button {
+	position: relative;
+	padding: 10px 20px;
+	background-image: linear-gradient(#e4a506, #c55108);
+	border-radius: 5px;
+	transition: all 0.12s;
+}
+
+button::before {
+	content: "";
+	width: 6px;
+	height: 6px;
+	border: 0;
+	border-top: solid 1px #ffffff;
+	border-right: solid 1px #ffffff;
+	position: absolute;
+	top: 50%;
+	left: 10px;
+	margin-top: -4px;
+	transform: rotate(45deg);
+}
+
+button:hover {
+	opacity: 0.9;
+}
+
+.btn {
+	color: white;
+}
+
+.wrapper {
+	max-width: 1060px;
+	margin: 0 auto 80px auto;
+	padding: 0 2%;
+	font-size: 0.9rem;
+}
+
+.flex-box {
+	display: flex;
+}
+
+/* header */
+#header {
+	max-width: 960px;
+	margin: 10px auto 0 auto;
+}
+
+/* mainImg */
+.main-img {
+	max-width: 1060px;
+	margin: 0 auto 20px auto;
+}
+
+.main-img img {
+	max-width: 100%;
+	object-fit: contain;
+}
+
+/* video-section */
+#videoSection h2 {
+	margin-bottom: 30px;
+}
+
+#videoSection ul {
+	align-items: center;
+	justify-content: space-between;
+}
+
+#videoSection ul li h3 {
+	text-align: center;
+	font-size: 1.5rem;
+	color: green;
+}
+
+#videoSection ul li video {
+	width: 95%;
+}
+
+#videoSection p {
+	margin-top: 30px;
+	padding: 0 20px;
+}
+
+#videoSection .btn-box {
+	align-items: center;
+	justify-content: center;
+	margin: 20px;
+}
+
+#videoSection .btn-box button {
+	margin: 10px;
+}
+
+#videoSection .hint-box {
+	margin-top: 40px;
+	justify-content: space-between;
+}
+
+#videoSection .hint-box .hint {
+	background-color: white;
+	width: 30%;
+	padding-bottom: 10px;
+}
+
+/* section1 */
+#section1 {
+	background-image: url("./img 2/bg_boxStyle01.png");
+	margin: 0 2%;
+	border-radius: 10px;
+	border: 4px solid rgb(121, 158, 121);
+}
+
+/* sp */
+@media screen and (max-width: 600px) {
+	.flex-box {
+		flex-direction: column;
+	}
+
+	/* logo */
+	#header h1 img {
+		margin: 0 auto;
+	}
+
+	/* video-section */
+	#videoSection ul li video {
+		width: 100%;
+	}
+
+	#videoSection .btn-box button {
+		width: 100%;
+		margin: 5px;
+	}
+
+	#videoSection .hint-box {
+		justify-content: center;
+		align-items: center;
+	}
+
+	#videoSection .hint-box .hint {
+		width: 100%;
+		margin: 5px;
+	}
+
+	#videoSection .hint-box .hint img {
+		width: 100%;
+	}
+}
